--- a/the_syllabus.html
+++ b/the_syllabus.html
@@ -8,7 +8,7 @@
   	<meta name="description" content="The Syllabus">
   	<meta name="author" content="The-Syllabus">
 
-  	<link rel="stylesheet" href="css/syllabus_styles.css?v=1.0">
+  	<link rel="stylesheet" href="syllabus_styles.css?v=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"> 
 </head>
