--- a/the_syllabus.html
+++ b/the_syllabus.html
@@ -7,6 +7,7 @@
 
   	<meta name="description" content="The Syllabus">
   	<meta name="author" content="The-Syllabus">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
   	<link rel="stylesheet" href="syllabus_styles.css?v=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> 
